# aushadhalayam

./: .gitignore  BUILDING.md  README.md
client-legacy/: CMakeLists.txt
client-legacy/src/: AppColors.h  BillingGrid.cpp  BillingGrid.h  BillingPage.cpp  BillingPage.h  ChartPanel.cpp  ChartPanel.h  CustomersPage.cpp  CustomersPage.h  DashboardPage.cpp  DashboardPage.h  DatabaseManager.cpp  DatabaseManager.h  GstEngine.h  InventoryPage.cpp  InventoryPage.h  MainFrame.cpp  MainFrame.h  MedicinesPage.cpp  MedicinesPage.h  Pages.h  PrinterManager.cpp  PrinterManager.h  PurchasePage.cpp  PurchasePage.h  SalesPage.cpp  SalesPage.h  SettingsPage.cpp  SettingsPage.h  SidebarPanel.cpp  SidebarPanel.h  WorkerThread.cpp  WorkerThread.h  main.cpp
client-modern/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
client-modern/src/: App.tsx  index.css  tabler-icons.d.ts
client-modern/src-tauri/: Cargo.toml  schema.sql  tauri.conf.json
client-modern/src-tauri/src/: main.rs  state.rs
client-modern/src-tauri/src/commands/: billing.rs  gst.rs  inventory.rs  mod.rs
client-modern/src-tauri/src/db/: mod.rs  sync.rs
client-modern/src-tauri/src/printer/: mod.rs
client-modern/src/components/: Sidebar.tsx  Topbar.tsx
client-modern/src/data/: api.ts  mock.ts  types.ts
client-modern/src/screens/: Billing.tsx  Customers.tsx  Dashboard.tsx  Inventory.tsx  Medicines.tsx  Purchase.tsx  Sales.tsx  Settings.tsx
docs/: CODEBASE_GUIDE.md
