[package]
name    = "aushadhalayam-pos"
version = "0.1.0"
edition = "2021"
description = "Aushadhalayam Pharmacy POS — modern desktop client (Tauri 2)"
authors     = ["Aushadhalayam Team"]

# ─────────────────────────────────────────────────────────────────────────────
# FEATURE FLAGS
# ─────────────────────────────────────────────────────────────────────────────
[features]
default     = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# ─────────────────────────────────────────────────────────────────────────────
# RUNTIME DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]

# Tauri 2 framework
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }

# SQLite — `bundled` compiles sqlite3 from source; no system library required.
# `chrono` maps SQLite TEXT dates to chrono types.
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }

# Async runtime — full feature set (IO, time, macros, spawn_blocking)
tokio = { version = "1", features = ["full"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamping
chrono = { version = "0.4", features = ["serde"] }

# cookie 0.18.1 (pulled by tauri) calls time's Parsable::parse() with 1 arg,
# but time 0.3.37 changed the signature to require 2 args. Pin below the break.
time = ">=0.3, <0.3.37"

# UUID v4 for device_id generation
uuid = { version = "1", features = ["v4"] }

# Structured error handling
anyhow    = "1"
thiserror = "1"

# Logging facade (wired to tauri's log plugin in main.rs)
log = "0.4"

# Thread-safe lazy statics (used in printer module)
once_cell = "1"

# ─────────────────────────────────────────────────────────────────────────────
# PLATFORM-SPECIFIC DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────

# Windows: GDI + Spooler APIs for thermal/laser printer integration
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Printing",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Xps",           # StartDocA, EndDoc, StartPage, EndPage, DOCINFOA
    "Win32_System_IO",             # WriteFile (OVERLAPPED type)
    "Win32_Security",              # CreateFileA (SECURITY_ATTRIBUTES param)
    "Win32_System_WindowsProgramming", # MulDiv
] }

# ─────────────────────────────────────────────────────────────────────────────
# BUILD DEPENDENCIES
# ─────────────────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ─────────────────────────────────────────────────────────────────────────────
# RELEASE PROFILE — optimise for size and startup latency
# ─────────────────────────────────────────────────────────────────────────────
[profile.release]
opt-level     = "z"          # minimise binary size
lto           = true
codegen-units = 1
strip         = true
panic         = "abort"      # remove unwinding machinery
